refactor: merge